MULE-1932. Fixed up Lifecycle Exception handling. new Exception types to handle different lifecycle phases, Create, Start and StopException.
git-svn-id: https://svn.codehaus.org/mule/branches/mule-2.x@7157 bf997673-6b11-0410-b953-e057580c5b09